--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div style="font-size: 14px;">
     <p style="font-size:24px">证书信息</p >
-    <img src="./1.jpg" alt="">
+    <img src="./liuhuijuan.jpg" alt="">
     <p>姓名：刘会娟</p >
     <p>性别：女</p >
     <p>出生年月：1979-08-25</p >
