--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div style="font-size: 14px;">
-    <p style="font-size:24px">证书信息1</p >
+    <p style="font-size:24px">证书信息</p >
     <img src="./liuhijuan.png"  alt="">
     <p>姓名：刘会娟</p >
     <p>性别：女</p >
